fixing collapseCenters if tradeCenters & added routerLink for test

--- a/src/app/trades/trade-details/trade-details.component.css
+++ b/src/app/trades/trade-details/trade-details.component.css
@@ -25,8 +25,11 @@ button.btn.btn-primary:hover {
 
 }
 
-.secund{
+.third, .secund{
   border-bottom: 0;
+}
+.third{
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 button.btn-primary:hover {
